[gd_scene load_steps=9 format=3 uid="uid://cgx77dxwqkpgv"]

[ext_resource type="Script" path="res://Scripts/main_menu_script.gd" id="1_yj0jo"]
[ext_resource type="PackedScene" uid="uid://cn5uyx74c6b3w" path="res://Scenes/main.tscn" id="2_a6htu"]
[ext_resource type="Texture2D" uid="uid://k85ra5elukaj" path="res://Assets/GradiantBG.tres" id="3_73jhc"]
[ext_resource type="PackedScene" uid="uid://badv43a3aab5s" path="res://UI/Intro.tscn" id="3_m244d"]
[ext_resource type="PackedScene" uid="uid://b8q8e7gytwha8" path="res://UI/TitleScreen.tscn" id="4_qghl6"]
[ext_resource type="PackedScene" uid="uid://bjledbeerblnq" path="res://UI/SettingsScreen.tscn" id="5_flhes"]
[ext_resource type="PackedScene" uid="uid://cfkwn7gwo5l8i" path="res://UI/CreditsScreen.tscn" id="6_mvxtl"]
[ext_resource type="PackedScene" uid="uid://bmj3vrts4tx42" path="res://UI/PauseScreen.tscn" id="7_kg3cv"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_yj0jo")
game_scene = ExtResource("2_a6htu")
intro = ExtResource("3_m244d")

[node name="BgGradiant" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_73jhc")

[node name="TitleContainer" parent="." instance=ExtResource("4_qghl6")]
visible = false
layout_mode = 1

[node name="SettingsContainer" parent="." instance=ExtResource("5_flhes")]
visible = false
layout_mode = 1
offset_left = 1152.0
offset_right = 1152.0

[node name="CreditsContainer" parent="." instance=ExtResource("6_mvxtl")]
visible = false
layout_mode = 1
offset_left = 1152.0
offset_right = 1152.0

[node name="PauseContainer" parent="." instance=ExtResource("7_kg3cv")]
visible = false
layout_mode = 1

[connection signal="credits_pressed" from="TitleContainer" to="." method="_on_credits_pressed"]
[connection signal="quit_pressed" from="TitleContainer" to="." method="_on_quit_btn_pressed"]
[connection signal="settings_pressed" from="TitleContainer" to="." method="_on_settings_pressed"]
[connection signal="start_pressed" from="TitleContainer" to="." method="_on_start_btn_pressed"]
[connection signal="back_pressed" from="SettingsContainer" to="." method="_on_back_pressed"]
[connection signal="quit_pressed" from="SettingsContainer" to="." method="_on_quit_btn_pressed"]
[connection signal="back_pressed" from="CreditsContainer" to="." method="_on_back_pressed"]
[connection signal="quit_pressed" from="CreditsContainer" to="." method="_on_quit_btn_pressed"]
[connection signal="game_paused" from="PauseContainer" to="." method="_on_game_paused"]
[connection signal="menu_pressed" from="PauseContainer" to="." method="_on_pause_menu_pressed"]
[connection signal="quit_pressed" from="PauseContainer" to="." method="_on_quit_btn_pressed"]
[connection signal="settings_pressed" from="PauseContainer" to="." method="_on_settings_pressed"]
